deploy: 90e3523066a19d79a86d480a05c2bed77f61dcee

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/translation/de.json":["assets/translation/de.json"],"assets/translation/en.json":["assets/translation/en.json"],"packages/community_material_icon/fonts/materialdesignicons-webfont.ttf":["packages/community_material_icon/fonts/materialdesignicons-webfont.ttf"]}
+{"packages/community_material_icon/fonts/materialdesignicons-webfont.ttf":["packages/community_material_icon/fonts/materialdesignicons-webfont.ttf"]}
