prepared platform specific tree sitter dylib and dll files

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   toastification: ^2.2.0
 
 
+  flutter_gen: any
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_launcher_icons: ^0.13.1
@@ -73,4 +74,7 @@ ffigen:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/libs/
+
 
